--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "14.2.3",
     "qr-scanner": "^1.4.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.6",
