--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "axios": "^1.6.8",
+    "axios": "^1.7.7",
     "firebase": "^10.11.1",
     "jsdom": "^24.0.0",
-    "next": "14.2.3",
+    "next": "^14.2.12",
+    "notinha": "file:",
     "qr-scanner": "^1.4.2",
     "react": "^18",
     "react-dom": "^18",
